<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titleSize"
            android:text="@string/course_code"/>
        <EditText
            android:id="@+id/editCourseCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_course_code"
            android:layout_marginLeft="@dimen/marginLeft"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titleSize"
            android:text="@string/course_name"/>
        <EditText
            android:id="@+id/editCourseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_course_name"
            android:layout_marginLeft="@dimen/marginLeft"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titleSize"
            android:text="@string/course_grade"/>
        <EditText
            android:id="@+id/editCourseGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/course_grade"
            android:layout_marginLeft="@dimen/marginLeft"
            android:digits="ABCDF"
            android:maxLength="2"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titleSize"
            android:text="@string/course_credit"/>
        <EditText
            android:id="@+id/editCourseCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_course_credit"
            android:layout_marginLeft="@dimen/marginLeft"
            android:inputType="number"
            android:maxLength="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titleSize"
            android:text="@string/is_passed"/>
        <CheckBox
            android:id="@+id/editIsPassed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"/>
    </LinearLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_course"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>